--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.7.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-aos": "^1.0.1",
@@ -54,8 +55,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
-    "three": "^0.174.0",
-    "vite-plugin-radar": "^0.10.0"
+    "three": "^0.174.0"
   },
   "browserslist": [
     ">0.2%",
